create github pages

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
             <div class="col-12 col-md">
                 <div class="text-wrapper">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Burgess Lab</strong></h1>
-                    <p class="mbr-text mbr-fonts-style display-7">Our studies are directed at revealing brainstem circuits that regulate sensorimotor processing and motivational states. Two major behavioral paradigms we use to investigate these questions are control of the startle response by prepulse inhibition, and regulation of movement during light-seeking behavior.
-<br>
-<br>In addition, we have developed software for zebrafish behavioral and neuroanatomical analysis and a library of enhancer trap lines for manipulating the nervous system. Enhancer trap lines with strong expression in the nervous system are included in our Brain Browser, an atlas of zebrafish transgenic lines. Additional Gal4 transgenic lines are described in an online database.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">How does the brain select appropriate behavior when faced with a constantly changing environment and fluctuating internal goals?<br><br>We study neural circuits that integrate sensory processing with behavioral state, using the power of the optically transparent zebrafish larva.<br><br>To this end, we have developed software for analyzing behavioral and brain structure in zebrafish, along with a suite of novel genetic tools for probing the function of neural circuits.&nbsp;</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-info display-4" href="https://www.nichd.nih.gov/research/atNICHD/Investigators/burgess">Read More</a></div>
                 </div>
             </div>
@@ -117,7 +115,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Go now</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
